Fix .bg-dark and .bg-light colors in dark mode
Closes https://github.com/LBH3/lbh3.org/issues/191

--- a/public/styles.less
+++ b/public/styles.less
@@ -98,6 +98,13 @@ mark {
   }
 }
 
+.bg-dark {
+  background-color: var(--background-dark-color) !important;
+}
+.bg-light {
+  background-color: var(--background-light-color) !important;
+}
+
 .border {
   border: 1px solid var(--border-color) !important;
 }
@@ -251,6 +258,8 @@ mark {
   --alert-success-text-color: #155724;
   --awesomplete-background-color: rgba(255, 255, 255, 0.9);
   --awesomplete-border-color: rgba(0, 0, 0, .15);
+  --background-dark-color: #343a40;
+  --background-light-color: #f8f9fa;
   --border-color: #dee2e6;
   --button-color-danger-background-color: #dc3545;
   --button-color-danger-border-color: #dc3545;
@@ -309,6 +318,8 @@ mark {
     --alert-success-text-color: #c3e6cb;
     --awesomplete-background-color: rgba(40, 40, 40, 0.9);
     --awesomplete-border-color: rgba(255, 255, 255, .15);
+    --background-dark-color: #f8f9fa;
+    --background-light-color: #343a40;
     --border-color: #32383e;
     --button-color-danger-background-color: #bd2130;
     --button-color-danger-border-color: #c82333;
